--- a/scss/404.scss
+++ b/scss/404.scss
@@ -129,3 +129,14 @@ main {
         }
     }
 }
+@media(min-width: 768px) and (max-width: 1279px){
+    .main-block {
+        transform: scale(0.8);
+        .oops {
+            transform: scale(0.8);
+        }
+        span {
+            transform: scale(0.8);
+        }
+    }
+}
