--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,6 +9,207 @@ $grey: #afaead;
     justify-content: space-around;
 }
 
+@media (min-width: 1280px) {
+    .modal-wrapper {
+        visibility: hidden;
+        position:fixed;
+        display:flex;
+        top: 0;
+        width:100%;
+        height:100%;
+        margin-left: -56px;
+        justify-content:center;
+        align-items:center;
+        background:rgba(0,0,0,.7);
+        z-index:11;
+        .popupOverlay {
+            position:absolute;
+            width:100%;
+            height:100%;
+            z-index:1;
+        }
+        .modal-window {
+            width:300px;
+            height:500px;
+            z-index:2;
+            .popup {
+                visibility: hidden;
+                width: 500px;
+                height: 467px;
+                background-color: #fff;
+                color: $nav-font;
+                border-radius: 6px;
+                padding: 50px;
+                box-sizing: border-box;
+                position: absolute;
+                top: 17%;
+                left: 32.5%;
+                -webkit-user-select: none;
+                -moz-user-select: none;
+                -ms-user-select: none;
+                user-select: none;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                font-size: 13px;
+                h2 {
+                    text-align: center;
+                    font-size: 28px;
+                    font-weight: bold;
+                }
+                form {
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-around;
+                    .labelAndInput {
+                        width: 100%;
+                        height: 20%;
+                        margin: 20px;
+                        margin-left: 0;
+                        label {
+                            display: block;
+                            margin-top: 10px;
+                            margin-bottom: 10px;
+                            position: relative;
+                            a {
+                                position: absolute;
+                                right: 0;
+                            }
+                        }
+                        .input {
+                            position: relative;
+                            box-sizing: border-box;
+                            i.far {
+                                position: absolute;
+                                top: 33%;
+                                right: 3%;
+                                color: #afaead;
+                                z-index: 1;
+                                margin: 0;
+                            }
+                        }
+                        input {
+                            border: 2px solid rgba(69, 65, 62, 0.2);
+                            border-radius: 50px;
+                            text-align: center; 
+                            height: 38px;
+                            width: 100%;
+                        } 
+                    }
+                    button {
+                        margin: 20px auto;
+                        background-color: $nav-item-border;
+                        color: #fff;
+                        border: none;
+                    }
+                }
+                a {
+                    text-align: center;
+                    color: $nav-item-border;
+                }
+            }
+              
+            /* Toggle this class - hide and show the popup */
+            .show {
+                visibility: visible;
+                z-index: 2;
+                -webkit-animation: fadeIn 0.5s;
+                animation: fadeIn 0.5s;
+            }
+            
+            /* Add animation (fade in the popup) */
+            @-webkit-keyframes fadeIn {
+                from {opacity: 0;} 
+                to {opacity: 1;}
+            }
+            
+            @keyframes fadeIn {
+                from {opacity: 0;}
+                to {opacity:1 ;}
+            }
+        }
+    }
+    .darken {
+        visibility: visible !important;
+    }
+
+    .cookieOverlay {
+        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: rgba(0,0,0,.5);
+        z-index: 11;
+        width: 100%;
+        height: 100%;
+        padding: 1rem;
+        align-items: center;
+        justify-content: center;
+        .cookieBody {
+            display: inline-block;
+            width: 90%;
+            min-height: 150px;
+            padding: 15px;
+            box-sizing: border-box;
+            background-color: white;
+            border-radius: 8px;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: space-between;
+            position: relative;
+            h3 {
+                font-weight: bold;
+                color: $nav-item-border;
+                margin-bottom: 10px;
+            }
+            p {
+                font-size: 14px;
+                line-height: 21px;
+                width: 80%;
+                a {
+                    color: #83bc22;
+                }
+            }
+            a.close,
+            a.submit {
+                margin-top: 0;
+                display: inline-block;
+                color: white;
+                background-color: $nav-item-border;
+                text-decoration: none;
+                font-family: sans-serif;
+                &:last-of-type {
+                    margin-right: 0;
+                }
+            }
+            a.close {
+                background-color: #fff;
+                color: $nav-font;
+                font-size: 26px;
+                position: absolute;
+                top: 4px;
+                right: 6px;
+            }
+            a.submit {
+                position: absolute;
+                bottom: 25px;
+                right: 25px;
+                padding-top: 10px;
+                box-sizing: border-box;
+                width: 148px;
+                height: 37px;
+                border-radius: 50px;
+                cursor: pointer;
+                font-family: 'Lato', sans-serif;
+                text-align: center;
+            }
+        }
+    }
+}
+
 body {
     margin: 0 auto;
     min-height: 100vh;
@@ -219,201 +420,6 @@ main {
     padding-top: 81px;
     min-height: 100vh;
     position: relative;
-    .modal-wrapper {
-        visibility: hidden;
-        position:fixed;
-        display:flex;
-        top: 0;
-        width:100%;
-        height:100%;
-        margin-left: -56px;
-        justify-content:center;
-        align-items:center;
-        background:rgba(0,0,0,.7);
-        z-index:11;
-        .popupOverlay {
-            position:absolute;
-            width:100%;
-            height:100%;
-            z-index:1;
-        }
-        .modal-window {
-            width:300px;
-            height:500px;
-            z-index:2;
-            .popup {
-                visibility: hidden;
-                width: 500px;
-                height: 467px;
-                background-color: #fff;
-                color: $nav-font;
-                border-radius: 6px;
-                padding: 50px;
-                box-sizing: border-box;
-                position: absolute;
-                top: 17%;
-                left: 32.5%;
-                -webkit-user-select: none;
-                -moz-user-select: none;
-                -ms-user-select: none;
-                user-select: none;
-                display: flex;
-                flex-direction: column;
-                justify-content: space-between;
-                font-size: 13px;
-                h2 {
-                    text-align: center;
-                    font-size: 28px;
-                    font-weight: bold;
-                }
-                form {
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: space-around;
-                    .labelAndInput {
-                        width: 100%;
-                        height: 20%;
-                        margin: 20px;
-                        margin-left: 0;
-                        label {
-                            display: block;
-                            margin-top: 10px;
-                            margin-bottom: 10px;
-                            position: relative;
-                            a {
-                                position: absolute;
-                                right: 0;
-                            }
-                        }
-                        .input {
-                            position: relative;
-                            box-sizing: border-box;
-                            i.far {
-                                position: absolute;
-                                top: 33%;
-                                right: 3%;
-                                color: #afaead;
-                                z-index: 1;
-                                margin: 0;
-                            }
-                        }
-                        input {
-                            border: 2px solid rgba(69, 65, 62, 0.2);
-                            border-radius: 50px;
-                            text-align: center; 
-                            height: 38px;
-                            width: 100%;
-                        } 
-                    }
-                    button {
-                        margin: 20px auto;
-                        background-color: $nav-item-border;
-                        color: #fff;
-                        border: none;
-                    }
-                }
-                a {
-                    text-align: center;
-                    color: $nav-item-border;
-                }
-            }
-              
-            /* Toggle this class - hide and show the popup */
-            .show {
-                visibility: visible;
-                z-index: 2;
-                -webkit-animation: fadeIn 0.5s;
-                animation: fadeIn 0.5s;
-            }
-            
-            /* Add animation (fade in the popup) */
-            @-webkit-keyframes fadeIn {
-                from {opacity: 0;} 
-                to {opacity: 1;}
-            }
-            
-            @keyframes fadeIn {
-                from {opacity: 0;}
-                to {opacity:1 ;}
-            }
-        }
-    }
-    .darken {
-        visibility: visible !important;
-    }
-
-    .cookieOverlay {
-        display: none;
-        position: fixed;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        background-color: rgba(0,0,0,.5);
-        z-index: 11;
-        width: 100%;
-        height: 100%;
-        padding: 1rem;
-        align-items: center;
-        justify-content: center;
-        .cookieBody {
-            display: inline-block;
-            width: 90%;
-            min-height: 150px;
-            padding: 25px;
-            box-sizing: border-box;
-            background-color: white;
-            border-radius: 8px;
-            display: flex;
-            flex-direction: column;
-            align-items: flex-start;
-            justify-content: space-between;
-            position: relative;
-            h3 {
-                font-weight: bold;
-                color: $nav-item-border;
-                margin-bottom: 10px;
-            }
-            p {
-                font-size: 14px;
-                line-height: 21px;
-                width: 80%;
-            }
-            a.close,
-            a.submit {
-                margin-top: 0;
-                display: inline-block;
-                color: white;
-                background-color: $nav-item-border;
-                text-decoration: none;
-                font-family: sans-serif;
-                &:last-of-type {
-                    margin-right: 0;
-                }
-            }
-            a.close {
-                background-color: #fff;
-                color: $nav-font;
-                font-size: 26px;
-                position: absolute;
-                top: 4px;
-                right: 6px;
-            }
-            a.submit {
-                position: absolute;
-                bottom: 25px;
-                right: 25px;
-                padding-top: 10px;
-                box-sizing: border-box;
-                width: 148px;
-                height: 37px;
-                border-radius: 50px;
-                cursor: pointer;
-                font-family: 'Lato', sans-serif;
-                text-align: center;
-            }
-        }
-    }
 }
 
 .slider-block {
@@ -813,7 +819,7 @@ button:focus, input:focus {
         margin-bottom: 42px;
     }
     p {
-        font-size: 12px;
+        font-size: 13px;
     }
 }
 .latest-posts{
@@ -1056,15 +1062,10 @@ footer {
     }
 }
 
-@media(min-width: 768px) and (max-width: 1280px){
-    body {
-        overflow-x: hidden;
-    }
+@media(min-width: 768px) and (max-width: 1279px){
     .menu-burger__header {
-        // position: relative;
         width: 40px;
         height: 35px;
-        // display: block;
         position: relative;
     }
     .menu-burger__header span, .menu-burger__header:after, .menu-burger__header:before{
@@ -1087,38 +1088,6 @@ footer {
     .menu-burger__header:before{
         top: 18px;
     }
-    .header-nav {
-        display: block;
-        position: absolute;
-        top: 81px;
-        left: -100%;
-        height: 400px;
-        width: 200px;
-        background: $nav-items-bgd;
-        overflow: auto;
-        box-shadow: 0 4px 2px -2px rgba(36, 36, 36, 0.17);
-        transition: all 0.4s ease;
-        .nav-item {
-            display: block;
-            color: #fff;
-            font-weight: bold;
-            padding: 15px;
-        }
-        .icons-block {
-            position: absolute;
-            bottom: 0;
-            * {
-                font-size: 15px;
-                height: 42px;
-            }
-        } 
-    }
-    .header-nav.open-menu {
-        left: 0;
-    }
-    .header-logo {
-        margin: auto;
-    }
     .menu-burger__header.open-menu span {
         opacity: 0; 
         transition: 0.5s; 
@@ -1133,7 +1102,142 @@ footer {
         bottom: 16px;
         transition: 0.4s;
     }
+    .header-nav.open-menu {
+        left: 0;
+    }
+    .header-logo {
+        margin: auto;
+    }
+    .header-nav {
+        display: block;
+        position: absolute;
+        padding-top: 10px;
+        width: 100%;
+        height: 100vh;
+        top: 81px;
+        left: -110%;
+        background: $nav-items-bgd;
+        overflow: auto;
+        box-shadow: 0 4px 2px -2px rgba(36, 36, 36, 0.17);
+        transition: all 0.4s ease;
+        .nav-item {
+            display: block;
+            color: #fff;
+            font-weight: bold;
+            padding: 15px;
+        }
+        .nav-item:nth-child(n + 5) {
+            display: none;
+        }
+        .dropdown-content {
+            position: absolute;
+            left: -2px;
+            top: 45px;
+        }
+        .dropdown:hover .dropdown-content { 
+            .dropdown-container {
+                display: flex;
+                flex-direction: column;
+                flex-basis: auto;
+                font-size: 14px;
+                position: relative;
+                top: -40px;
+            }
+            .dropdown-container strong {
+                font-size: 12px;
+            }
+            .drowdown-img {
+                width: 200px;
+            }
+        }
+    }
     .fixed-page{
         overflow: hidden;
+    }
+    .slider-block {
+        width: 100%;
+        .slider-left {
+            // transform: scale(0.9);
+            margin: 0 auto;
+            height: 75vh;
+            box-sizing: border-box;
+            padding: 30px;
+            border-radius: 5px;
+        }
+        .slider-right {
+            display: none;
+        }
+    }
+    // .products-block {
+    //     .items {
+    //         .item, #specificItem, .static-item {
+    //             transform: scale(0.7);
+    //         }
+    //     }
+    // }
+    .banner {
+        background-position-x: right;
+    }
+    .latest-posts {
+        display: none;
+    }
+    .services {
+        flex-direction: column;
+        justify-content: space-between;
+        .service-block {
+            max-width: 700px;
+            width: 100%;
+            height: 90px;
+            margin: 10px auto;
+            img {
+                transform: scale(0.8);
+                width: 80px;
+            }
+            p {
+                width: 90%;
+                font-size: 13px;
+            }
+            h3 {
+                font-size: 15px;
+            }
+        }
+        .service-block:nth-child(even) {
+            position: relative;
+            img {
+                position: absolute;
+                right: 0;
+            }
+            div {
+                position: absolute;
+                left: 0;
+            }
+        }
+    }
+    .icons-block {
+        background-color: $nav-items-bgd;
+        width: 100vw;
+        height: fit-content;
+        margin-left: -56px;
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        * {
+            font-size: 17px;
+            height: 42px;
+            color: #fff;
+        }
+        .nav-item .count {
+            background-color: $nav-items-bgd;
+            width: 13px;
+            height: 13px;
+            top: 10px;
+            right: 15px;
+            font-size: 8px;
+            text-align: center;
+            border: 1px solid $nav-item-border;
+        }
+        .nav-item {
+            height: fit-content;
+        }
     }
 }
