--- a/css/404.css
+++ b/css/404.css
@@ -103,3 +103,11 @@ main {
           margin: 0; }
         main .main-block .right-to-oops .input input:focus {
           outline: 0; }
+
+@media (min-width: 768px) and (max-width: 1279px) {
+  .main-block {
+    transform: scale(0.8); }
+    .main-block .oops {
+      transform: scale(0.8); }
+    .main-block span {
+      transform: scale(0.8); } }
